Fix: The bottom spacing issue on Font Variants field

--- a/inc/customizer/custom-controls/typography/selectWoo.css
+++ b/inc/customizer/custom-controls/typography/selectWoo.css
@@ -202,8 +202,7 @@
     border-radius: 4px;
     cursor: default;
     float: left;
-    margin-right: 5px;
-    margin-top: 5px;
+    margin: 5px 3px 5px 0;
     padding: 0 5px; }
   .select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
     color: #999;
